--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asylum Ventures</title>
     <link href="{{ url_for('static', filename = 'css/tailwind.min.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', filename = 'style.css')}}" rel="stylesheet">
 </head>
 <body class="bg-[#F2F2F0] min-h-screen flex flex-col">
     <header class="container mx-auto px-4 py-8">
