--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -5,103 +5,144 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asylum Ventures</title>
     <link href="{{ url_for('static', filename = 'css/tailwind.min.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', filename = 'css/index.css')}}" rel="stylesheet">
 </head>
-<body class="bg-[#F2F2F0] min-h-screen flex flex-col">
-    <header class="container mx-auto px-4 py-8">
-        <div class="flex justify-between items-start">
-            <div class="text-sm text-center w-1/5">
-                <h1>PETRICHOR</h1>
-                <p>EXPERIMENTAL EDUCATION</p>
-                <p>TAIPEI, TAIWAN</p>
-                <p>GET IN TOUCH</p>
-            </div>
+<body cz-shortcut-listen="true">
+    <div class = "site-wrapper">
+        <div class = "content gradient-background">
+            <div class = "min-h-screen flex flex-col relative overflow-hidden bg-[#F2F2F0]">
+                <div class = "flex-grow sm:p-2 md:p-8 lg:p-12 pb-36 flex justify-center relative z-10">
+                    <div class = "max-w-[1440px] p-2 sm:p-1 md:p-8 lg:p-12 w-full rounded-lg mt-5 flex flex-col>">
+                        <main class = "flex-grow flex flex-col items-center">
+                            <div class = "content w-full">
+                                <header class="mb-12 w-full">
+                                    <div class="flex flex-col items-center space-y-4">
 
-            <div class="text-sm text-center w-1/5">
-                <div class="grid grid-cols-6 grid-rows-4 h-28">
-                    <span class="col-start-1 row-start-1">A</span>
-                    <span class="col-start-3 row-start-2">Y</span>
-                    <span class="col-start-2 row-start-4">S</span>
-                    <span class="col-start-5 row-start-3">U</span>
-                    <span class="col-start-5 row-start-2">L</span>
-                    <span class="col-start-6 row-start-4">M</span>
+                                        <h1 class="text-sm mt-4 mb-8 tracking-widest w-1/3 text-center cursor-pointer">
+                                            <div class="grid grid-cols-6 grid-rows-4">
+                                                <span class="col-start-1 row-start-1">A</span>
+                                                <span class="col-start-3 row-start-2">Y</span>
+                                                <span class="col-start-2 row-start-4">S</span>
+                                                <span class="col-start-5 row-start-3">U</span>
+                                                <span class="col-start-5 row-start-2">L</span>
+                                                <span class="col-start-6 row-start-4">M</span>
+                                            </div>
+                                        </h1>
+
+                                        <div class = "w-full text-sm">
+                                            <div class = "flex w-5/5 justify-between">
+                                                <p>PETRICHOR</p>
+                                                <p>NICK CHIRLS</p>
+                                            </div>
+                                            <div class = "flex justify-between">
+                                                <p>EXPERIMENTAL EDUCATION</p>
+                                                <p>JON WU</p>
+                                            </div>
+                                            <div class = "flex justify-between">
+                                                <p>TAIPEI, TAIWAN</p>
+                                                <p>MACKENZIE REGENT</p>
+                                            </div>
+                                            <div class = "flex justify-between">
+                                                <p>GET IN TOUCH</p>
+                                            </div>
+                                        </div>
+
+                                        <!-- <div class="text-sm text-center w-1/5">
+                                            <h1>PETRICHOR</h1>
+                                            <p>EXPERIMENTAL EDUCATION</p>
+                                            <p>TAIPEI, TAIWAN</p>
+                                            <p>GET IN TOUCH</p>
+                                        </div> -->
+
+
+
+                                        <!-- <div class="text-sm text-center w-1/5">
+                                            <nav>
+                                                <a href="https://x.com/nchirls" target="_blank" rel="noopener noreferrer" class="hover:underline">NICK CHIRLS</a>
+                                                <a href="https://x.com/jonwu_" target="_blank" rel="noopener noreferrer" class="hover:underline">JON WU</a>
+                                                <a href="https://x.com/kenzieregent" target="_blank" rel="noopener noreferrer" class="hover:underline">MACKENZIE REGENT</a>
+                                            </nav>
+                                        </div> -->
+
+                                    </div>
+                                </header>
+
+                                <div class="w-full mx-auto">
+                                    <section class="max-w-3xl mx-auto text-sm text-justify space-y-4">
+                                        <p class = "smoke">To the artists -</p>
+
+                                        <p class = "smoke">Asylum Ventures is a new venture firm dedicated to the creative act of building companies. We raised $55 million to invest $1-2 million in early-stage founders practicing the art of making startups.</p>
+
+                                        
+                                        <h2 class="text-center uppercase tracking-wider smoke">Origins</h2>
+
+                                        <article class = "smoke">
+                                            <p>In 2007, I was working as a junior trader at Lehman Brothers. I hated it - the dehumanizing culture, lack of creativity, and singular focus on transactions and money left me feeling uninspired and lost. I didn't know it then, but Lehman's bankruptcy in '08 was a gift, and I left in search of a calling.</p>
+
+                                            <p>I spent a few years meandering - writing, working odd jobs, grad school in Hong Kong - ultimately ending up back in NYC in 2009, having stumbled upon a young, passionate group of misfits that folks were calling "founders." These founders felt more like artists than assets, more obsessives than executives. They were avant garde, they were building the things they wanted to see in the world, and to my surprise, people called venture capitalists gave them money to pursue their dreams.</p>
+
+                                            <!-- Rest of the content follows similar refactoring pattern -->
+                                        </article>
+
+                                        <h2 class="text-center uppercase tracking-wider smoke ">Into the Asylum</h2>
+
+                                        <section class="grid md:grid-cols-2 gap-8 smoke">
+                                            <div>
+                                                <p>We think it means:</p>
+                                                <ul class="list-disc pl-5">
+                                                    <li>A firm that's small by design, that makes a handful of investments per year, and that eschews board seats and administrative control.</li>
+                                                    <li>A small team of partners moving mountains to help when asked and otherwise getting out of the way.</li>
+                                                </ul>
+                                            </div>
+                                            <div>
+                                                <ul class="list-disc pl-5">
+                                                    <li>A place for founders to tune out the noise and focus on making something truly great.</li>
+                                                    <li>A source of calm, trust, and support for founders who are manifesting beauty through one of the hardest things you can do: starting a company.</li>
+                                                </ul>
+                                            </div>
+                                        </section>
+
+                                        <section class="text-center space-y-4 py-8 ">
+                                            <div class = "smoke">More beauty and craft, less factory line</div>
+                                            <div class = "smoke">More weird and rebellious, less safe and derivative</div>
+                                            <div class = "smoke">More really hard inspired work, less status games</div>
+                                            <div class = "smoke">More authentic expression of self, less patagonia vest</div>
+                                        </section>
+                                    </section>
+                                </div>
+                            </div>
+                                <footer class="container mx-auto px-4 py-8">
+                                    <div class="flex justify-between items-start">
+                                        <div class="text-sm w-1/5">
+                                            <a href="https://x.com/asylumventures" target="_blank" rel="noopener noreferrer" class="hover:underline">@asylumventures</a>
+                                            <a href="mailto:hello@asylum.vc" class="hover:underline">hello@asylum.vc</a>
+                                        </div>
+
+                                        <div class="text-sm w-1/5 text-center">
+                                            <div class="grid grid-cols-6 grid-rows-4">
+                                                <span class="col-start-1 row-start-1">A</span>
+                                                <span class="col-start-6 row-start-1">S</span>
+                                                <span class="col-start-6 row-start-2">Y</span>
+                                                <span class="col-start-1 row-start-4">L</span>
+                                                <span class="col-start-2 row-start-3">U</span>
+                                                <span class="col-start-4 row-start-2">M</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="text-sm w-1/5 text-center">
+                                            <blockquote>Being good in business is the most fascinating kind of art. - Warhol</blockquote>
+                                        </div>
+                                    </div>
+                                </footer>
+                            
+                        </main>
+                    </div>    
                 </div>
-            </div>
-
-            <div class="text-sm text-center w-1/5">
-                <nav>
-                    <a href="https://x.com/nchirls" target="_blank" rel="noopener noreferrer" class="hover:underline">NICK CHIRLS</a>
-                    <a href="https://x.com/jonwu_" target="_blank" rel="noopener noreferrer" class="hover:underline">JON WU</a>
-                    <a href="https://x.com/kenzieregent" target="_blank" rel="noopener noreferrer" class="hover:underline">MACKENZIE REGENT</a>
-                </nav>
             </div>
         </div>
-    </header>
-
-    <main class="container mx-auto px-4 py-8 flex-grow">
-        <section class="max-w-3xl mx-auto text-sm text-justify space-y-4">
-            <p>To the artists -</p>
-
-            <p>Asylum Ventures is a new venture firm dedicated to the creative act of building companies. We raised $55 million to invest $1-2 million in early-stage founders practicing the art of making startups.</p>
-
-            <h2 class="text-center uppercase tracking-wider">Origins</h2>
-
-            <article>
-                <p>In 2007, I was working as a junior trader at Lehman Brothers. I hated it - the dehumanizing culture, lack of creativity, and singular focus on transactions and money left me feeling uninspired and lost. I didn't know it then, but Lehman's bankruptcy in '08 was a gift, and I left in search of a calling.</p>
-
-                <p>I spent a few years meandering - writing, working odd jobs, grad school in Hong Kong - ultimately ending up back in NYC in 2009, having stumbled upon a young, passionate group of misfits that folks were calling "founders." These founders felt more like artists than assets, more obsessives than executives. They were avant garde, they were building the things they wanted to see in the world, and to my surprise, people called venture capitalists gave them money to pursue their dreams.</p>
-
-                <!-- Rest of the content follows similar refactoring pattern -->
-            </article>
-
-            <h2 class="text-center uppercase tracking-wider">Into the Asylum</h2>
-
-            <section class="grid md:grid-cols-2 gap-8">
-                <div>
-                    <p>We think it means:</p>
-                    <ul class="list-disc pl-5">
-                        <li>A firm that's small by design, that makes a handful of investments per year, and that eschews board seats and administrative control.</li>
-                        <li>A small team of partners moving mountains to help when asked and otherwise getting out of the way.</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul class="list-disc pl-5">
-                        <li>A place for founders to tune out the noise and focus on making something truly great.</li>
-                        <li>A source of calm, trust, and support for founders who are manifesting beauty through one of the hardest things you can do: starting a company.</li>
-                    </ul>
-                </div>
-            </section>
-
-            <section class="text-center space-y-4 py-8">
-                <div>More beauty and craft, less factory line</div>
-                <div>More weird and rebellious, less safe and derivative</div>
-                <div>More really hard inspired work, less status games</div>
-                <div>More authentic expression of self, less patagonia vest</div>
-            </section>
-        </section>
-    </main>
-
-    <footer class="container mx-auto px-4 py-8">
-        <div class="flex justify-between items-start">
-            <div class="text-sm w-1/5">
-                <a href="https://x.com/asylumventures" target="_blank" rel="noopener noreferrer" class="hover:underline">@asylumventures</a>
-                <a href="mailto:hello@asylum.vc" class="hover:underline">hello@asylum.vc</a>
-            </div>
-
-            <div class="text-sm w-1/5 text-center">
-                <div class="grid grid-cols-6 grid-rows-4">
-                    <span class="col-start-1 row-start-1">A</span>
-                    <span class="col-start-6 row-start-1">S</span>
-                    <span class="col-start-6 row-start-2">Y</span>
-                    <span class="col-start-1 row-start-4">L</span>
-                    <span class="col-start-2 row-start-3">U</span>
-                    <span class="col-start-4 row-start-2">M</span>
-                </div>
-            </div>
-
-            <div class="text-sm w-1/5 text-center">
-                <blockquote>Being good in business is the most fascinating kind of art. - Warhol</blockquote>
-            </div>
-        </div>
-    </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="{{ url_for('static', filename = 'js/index.js')}}"></script>
 </body>
 </html>
