--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -18,7 +18,7 @@
                                 <header class="mb-12 w-full">
                                     <div class="flex flex-col items-center space-y-4">
 
-                                        <h1 class="text-sm mt-4 mb-8 tracking-widest w-1/3 text-center cursor-pointer">
+                                        <!-- <h1 class="text-sm mt-4 mb-8 tracking-widest w-1/3 text-center cursor-pointer">
                                             <div class="grid grid-cols-6 grid-rows-4">
                                                 <span class="col-start-1 row-start-1">A</span>
                                                 <span class="col-start-3 row-start-2">Y</span>
@@ -27,7 +27,7 @@
                                                 <span class="col-start-5 row-start-2">L</span>
                                                 <span class="col-start-6 row-start-4">M</span>
                                             </div>
-                                        </h1>
+                                        </h1> -->
 
                                         <div class = "w-full text-sm">
                                             <div class = "flex w-5/5 justify-between">
