full context + switch + r-smoke

--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -77,7 +77,7 @@
                                     <section class="max-w-3xl mx-auto text-sm text-justify space-y-4">
 
                                        
-                                        <h2 class="text-center tracking-wider smoke">For the scientists/artists/engineers/designers/litterateurs.</h2>
+                                        <h2 class="text-center tracking-wider smoke">For the <span id="salutation">scientists.   </span></h2>
 
                                         <article class = "smoke">
                                             <p>Based in Taipei, Taiwan, petrichor is an experimental learning space.</p>
@@ -92,7 +92,7 @@
                                                  we wanted to imagine something different. We believe that scientists are artists and artists are scientists, 
                                                  and that the continued separation of the two limits the imagination of what’s possible.</p>
                                         </article>
-                                        <article class = "smoke switch_container">
+                                        <article class = "smoke">
                                             <p>As traditional education continues to cultivate vocational thinking caused by hyper-specialization induced fragmentation,
                                                  we want to picture a generation of cross-disciplinary thinkers. We believe that a recognition of how seemingly divergent disciplines 
                                                  interplay to create is important for the next generation of <span class = "switch_text">scientists</span>. </p>
