--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -47,7 +47,7 @@
                                                 <div class="flex-cradle">
                                                     <div class="slider-cradle">
                                                     <div class="option-1">EN</div>
-                                                    <div class="option-2">中文</div>
+                                                    <div class="option-2">TW</div>
                                                     <div class="handle"></div>
                                                   </div>	
                                                 </div> 
