--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -106,8 +106,15 @@
                                         </article>
 
                                         <br>
-                                        <h2 class="text-center tracking-wider smoke ">Our First Program: Biotech x Design x Art </h2>
+                                        <h2 class="text-center tracking-wider smoke uppercase">Our First Program: Biotech x Design x Art </h2>
                                         <br>
+
+                                        <section class="text-center space-y-4 py-8 tracking-wider smoke uppercase">
+                                            <div class="grid grid-cols-2 grid-rows-2 items-center">
+                                                <div class="text-left row-start-1">Our First Program:</div>
+                                                <div class="text-right row-start-2">Biotech x Design x Art</div>
+                                            </div>
+                                        </section>
 
                                         <article class = "smoke">
                                             <p>Our first program offering is a research-based biotechnology-centric program that interplays design and art for students in highschool / 
@@ -120,9 +127,14 @@
                                         </article>
 
                                         <article class = "smoke">
-                                            <p>Students in this program will have the opportunity to participate in two competitions: BDC (Biodesign Challenge) & iGEM (international Genetically Engineered Machine). 
+                                            <p>Students in this program will have the opportunity to participate in two competitions: <span class = "weight_bold">BDC (Biodesign Challenge) & iGEM (international Genetically Engineered Machine)</span>. 
                                                 While competitions and their results are not the destination, if done right, they can catalyze creative thinking and innovation, allowing ideas to manifest.</p>
                                         </article>
+
+                                        <section class = "text-center space-y-4 py-8 ">
+                                            <img src="{{ url_for('static', filename = 'img/BDC.jpg')}}" alt="program" class="w-3/4 mx-auto">
+                                            <p style = "color: gray;">Biodesign Challenge: Orbweaver, University of Texas at Austin, 2023.</p>
+                                        </section>
 
                                         <h2 class="text-center tracking-wider smoke ">If this sounds like something you are interested in, </h2>
 
@@ -144,19 +156,21 @@
                                         </section> -->
 
                                         <section class="text-center space-y-4 py-8 ">
-                                            <div class = "smoke">More beauty and craft, less factory line</div>
-                                            <div class = "smoke">More weird and rebellious, less safe and derivative</div>
-                                            <div class = "smoke">More really hard inspired work, less status games</div>
-                                            <div class = "smoke">More authentic expression of self, less patagonia vest</div>
+                                            <div class = "smoke"></div>
+                                            <div class = "smoke"></div>
+                                            <div class = "smoke"></div>
+                                            <div class = "smoke"></div>
                                         </section>
+
+
                                     </section>
                                 </div>
                             </div>
                                 <footer class="container mx-auto px-4 py-8">
                                     <div class="flex justify-between items-start">
                                         <div class="text-sm w-1/5">
-                                            <a href="https://x.com/asylumventures" target="_blank" rel="noopener noreferrer" class="hover:underline">@asylumventures</a>
-                                            <a href="mailto:hello@asylum.vc" class="hover:underline">hello@asylum.vc</a>
+                                            <a href="petrichortpe@gmail.com" target="_blank" rel="noopener noreferrer" class="hover:underline">petrichortpe@gmail.com</a>
+                                            <a href="petrichortpe@gmail.com" class="hover:underline">petrichortpe@gmail.com</a>
                                         </div>
 
                                         <!-- <div class="text-sm w-1/5 text-center">
@@ -169,6 +183,8 @@
                                                 <span class="col-start-4 row-start-2">M</span>
                                             </div>
                                         </div> -->
+
+
 
                                         <div class="text-sm w-1/5 text-center">
                                             <blockquote>Being good in business is the most fascinating kind of art. - Warhol</blockquote>
