--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -127,7 +127,7 @@
 
                                         <section class = "text-center space-y-4 py-8 ">
                                             <img src="{{ url_for('static', filename = 'img/BDC.jpg')}}" alt="program" class="w-3/4 mx-auto BDCimage-en">
-                                            <p class = "smoke-en" style = "color: gray;">Biodesign Challenge: Orbweaver, University of Texas at Austin, 2023.</p>
+                                            <p class = "smoke-en" style = "color: gray;"><span class = "italic">Biodesign Challenge: Orbweaver</span>, University of Texas at Austin, 2023.</p>
                                         </section>
 
                                         <h2 class="text-center tracking-wider smoke-en ">If this sounds like something you are interested in, </h2>
@@ -173,7 +173,7 @@
                                     <section class="max-w-3xl mx-auto text-sm text-justify space-y-4">
 
                                        
-                                        <h2 class="text-center tracking-wider smoke-twn">致<span id="salutationTW" class = "uppercase">科學家們</span>,</h2>
+                                        <h2 class="text-center tracking-wider smoke-twn">致<span id="salutationTW" class = "uppercase">科學家／藝術家／工程師／設計師／文學家們</span>，</h2>
                                         <br>
                                         <article class = "smoke-twn">
                                             <p>位於臺北的「petrichor」是一座實驗性的學習空間。</p>
@@ -187,7 +187,7 @@
                                             <p>多年來台灣的“專案導向學習”在現行教育體制與補習文化的局限下，我們渴求創造出一些不一樣的可能性。同時懷抱著：科學家即是藝術家，藝術家亦是科學家；往往將兩者去做分隔，也限制了學生/甚至老師對可能性的想像。</p>
                                         </article>
                                         <article class = "smoke-twn">
-                                            <p>隨著傳統教育因高度專業化而變得碎片化與職業的思維固化，我們希望能培育出一代跨領域的思想家。我們相信，認識那些表面上看似分歧的學科如何交融與再創造，對下一代的<span class = "switch_textTW uppercase">科學家</span>真的很重要。</p>
+                                            <p>隨著傳統教育因高度專業化而變得碎片化與職業的思維固化，我們希望能培育出一代跨領域的思想家。我們相信，認識那些表面上看似分歧的學科如何交融與再創造，對下一代的<span class = "switch_textTW uppercase">科學家/藝術家</span>真的很重要。</p>
                                         </article>
 
                                       
@@ -215,15 +215,25 @@
                                         </article>
 
                                         <section class = "text-center space-y-4 py-8 ">
-                                            <img src="{{ url_for('static', filename = 'img/BDC.jpg')}}" alt="program" class="w-3/4 mx-auto BDCimage">
-                                            <p class = "smoke-twn" style = "color: gray;">Biodesign Challenge: Orbweaver, University of Texas at Austin, 2023.</p>
+                                            <img src="{{ url_for('static', filename = 'img/BDC.jpg')}}" alt="program" class="w-3/4 mx-auto BDCimage-twn">
+                                            <p class = "smoke-twn" style = "color: gray;"><span class = "italic">Biodesign Challenge: Orbweaver</span>, University of Texas at Austin, 2023.</p>
                                         </section>
 
+
+
+                                        <article class = "smoke-twn space-y-4">
+                                            <h2 class="text-center tracking-wider italic">一場初雨為沉寂的土壤奏起幽微的前奏， 一縷氣味自黑暗之中蘊生，婀娜如新芽破土，</h2>
+                                            <h2 class="text-center tracking-wider italic ">與靈感的細絲交織，化作微光， 召喚著思想者、創造者、行路人 ——</h2>
+                                            <h2 class="text-right tracking-wider italic">在未見的彼岸，靈感正悄然成林。</h2>
+                                        </article>
+
+
+                                        <br>
                                         <h2 class="text-center tracking-wider smoke-twn ">如果這段文字讓你興奮的話...</h2>
 
                                         <br>
 
-                                        <h2 class="text-center tracking-wider smoke-twn ">請填寫此表單。<a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">application form</a>.</h2>
+                                        <h2 class="text-center tracking-wider smoke-twn ">請填寫此<a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">表單</a>。</h2>
                                         <!-- <section class="grid md:grid-cols-2 gap-8 smoke">
                                             <div>
                                                 <p>We think it means:</p>
