--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -19,23 +19,7 @@
                                 <header class="mb-12 w-full">
                                     <div class="flex flex-col items-center space-y-4">
 
-                                        <!-- <h1 class="text-sm mt-4 mb-8 tracking-widest w-1/3 text-center cursor-pointer">
-                                            <div class="grid grid-cols-6 grid-rows-4">
-                                                <span class="col-start-1 row-start-1">A</span>
-                                                <span class="col-start-3 row-start-2">Y</span>
-                                                <span class="col-start-2 row-start-4">S</span>
-                                                <span class="col-start-5 row-start-3">U</span>
-                                                <span class="col-start-5 row-start-2">L</span>
-                                                <span class="col-start-6 row-start-4">M</span>
-                                            </div>
-                                            <div class="flex-cradle">
-                                                <div class="slider-cradle">
-                                                <div class="option-1">EN</div>
-                                                <div class="option-2">中文</div>
-                                                <div class="handle"></div>
-                                              </div>	
-                                            </div>
-                                        </h1>  -->
+
 
                                         <div class = "w-full text-sm">
                                             
@@ -63,13 +47,7 @@
                                         
 
 
-                                        <!-- <div class="text-sm text-center w-1/5">
-                                            <nav>
-                                                <a href="https://x.com/nchirls" target="_blank" rel="noopener noreferrer" class="hover:underline">NICK CHIRLS</a>
-                                                <a href="https://x.com/jonwu_" target="_blank" rel="noopener noreferrer" class="hover:underline">JON WU</a>
-                                                <a href="https://x.com/kenzieregent" target="_blank" rel="noopener noreferrer" class="hover:underline">MACKENZIE REGENT</a>
-                                            </nav>
-                                        </div> -->
+
 
                                     </div>
                                 </header>
@@ -135,21 +113,7 @@
                                         <br>
 
                                         <h2 class="text-center tracking-wider smoke-en ">please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">application form</a>.</h2>
-                                        <!-- <section class="grid md:grid-cols-2 gap-8 smoke">
-                                            <div>
-                                                <p>We think it means:</p>
-                                                <ul class="list-disc pl-5">
-                                                    <li>A firm that's small by design, that makes a handful of investments per year, and that eschews board seats and administrative control.</li>
-                                                    <li>A small team of partners moving mountains to help when asked and otherwise getting out of the way.</li>
-                                                </ul>
-                                            </div>
-                                            <div>
-                                                <ul class="list-disc pl-5">
-                                                    <li>A place for founders to tune out the noise and focus on making something truly great.</li>
-                                                    <li>A source of calm, trust, and support for founders who are manifesting beauty through one of the hardest things you can do: starting a company.</li>
-                                                </ul>
-                                            </div>
-                                        </section> -->
+
 
                                         <section class="text-center space-y-4 py-8 ">
                                             <div class = "smoke-en"></div>
@@ -276,21 +240,12 @@
                                             <a href="petrichortpe@gmail.com" class="hover:underline">petrichortpe@gmail.com</a>
                                         </div>
 
-                                        <!-- <div class="text-sm w-1/5 text-center">
-                                            <div class="grid grid-cols-6 grid-rows-4">
-                                                <span class="col-start-1 row-start-1">A</span>
-                                                <span class="col-start-6 row-start-1">S</span>
-                                                <span class="col-start-6 row-start-2">Y</span>
-                                                <span class="col-start-1 row-start-4">L</span>
-                                                <span class="col-start-2 row-start-3">U</span>
-                                                <span class="col-start-4 row-start-2">M</span>
-                                            </div>
-                                        </div> -->
+
 
 
 
                                         <div class="text-sm w-1/5 text-center">
-                                            <blockquote>Being good in business is the most fascinating kind of art. - Warhol</blockquote>
+                                            <blockquote>BDC X IGEM</blockquote>
                                         </div>
                                     </div>
                                 </footer>
