first program no font weight

--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -81,7 +81,7 @@
                                      
                                         <br>
 
-                                        <section class="text-center space-y-4 py-8 tracking-wider smoke-en uppercase weight_bold">
+                                        <section class="text-center space-y-4 py-8 tracking-wider smoke-en uppercase">
                                             <div class="grid grid-cols-2 grid-rows-2 items-center ">
                                                 <div class="text-right row-start-1">Our First Program:</div>
                                                 <div class="text-left  col-start-2 row-start-2">Biotech x Design x Art</div>
@@ -158,7 +158,7 @@
                                      
                                         <br>
 
-                                        <section class="text-center space-y-4 py-8 tracking-wider smoke-twn uppercase weight_bold">
+                                        <section class="text-center space-y-4 py-8 tracking-wider smoke-twn uppercase">
                                             <div class="grid grid-cols-2 grid-rows-2 items-center ">
                                                 <div class="text-right row-start-1">我們的第一個課程計畫：</div>
                                                 <div class="text-left  col-start-2 row-start-2">生物科技 x 設計 x 藝術</div>
@@ -236,16 +236,16 @@
                                 <footer class="container mx-auto px-4 py-8">
                                     <div class="flex justify-between items-start">
                                         <div class="text-sm w-1/5">
-                                            <a href="petrichortpe@gmail.com" target="_blank" rel="noopener noreferrer" class="hover:underline">petrichortpe@gmail.com</a>
-                                            <a href="petrichortpe@gmail.com" class="hover:underline">petrichortpe@gmail.com</a>
-                                        </div>
+                                            <a href="mailto:petrichortpe@gmail.com" target="_blank" rel="noopener noreferrer" class="hover:underline">petrichortpe@gmail.com</a><br>
+                                            <a href="mailto:petrichortpe@gmail.com" class="hover:underline">Connect With Us</a>
+                                        </div> 
 
 
 
 
 
                                         <div class="text-sm w-1/5 text-center">
-                                            <blockquote>BDC X IGEM</blockquote>
+                                            <blockquote><a href ="https://www.biodesignchallenge.org/" target="_blank" rel="noopener noreferrer">BDC</a> X <a href="https://igem.org/" target="_blank" rel="noopener noreferrer">IGEM</a></blockquote>
                                         </div>
                                     </div>
                                 </footer>
