update the minor stuff

--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -30,7 +30,7 @@
                                                 <p>EXPERIMENTAL EDUCATION</p>
                                                 <div class="flex-cradle">
                                                     <div class="slider-cradle">
-                                                    <div class="option-1" onclick="en_tog()">EN</div>
+                                                    <div class="option-1">EN</div>
                                                     <div class="option-2">TW</div>
                                                     <div class="handle"></div>
                                                   </div>	
