--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PETRICHOR - An Experimental Learning Space in Taipei</title>
+    <title>PETRICHOR</title>
     <meta name="description" content="Petrichor is an experimental learning space in Taipei focusing on biotech, design, and art for high school students. Join us to explore cross-disciplinary creativity." />
     <link href="{{ url_for('static', filename = 'css/tailwind.min.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename = 'css/index.css')}}" rel="stylesheet">
