--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PETRICHOR</title>
-    <meta name="description" content="Petrichor is an experimental learning space in Taipei focusing on biotech, design, and art for high school students. Join us to explore cross-disciplinary creativity." />
+    <meta name="description" content="petrichor is an experimental learning space in Taipei. Our first program is a cross-disciplinary research-based practice for highschool students that combines biotech, art, and design." />
     <link href="{{ url_for('static', filename = 'css/tailwind.min.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename = 'css/index.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename = 'css/toggle.css')}}" rel="stylesheet">
