--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PETRICHOR</title>
     <meta name="description" content="petrichor is an experimental learning space in Taipei. Our first program is a cross-disciplinary research-based practice for highschool students that combines biotech, art, and design." />
+    <link  href="{{ url_for('static', filename = 'img/tree_icon.png')}}" rel="icon" />
     <link href="{{ url_for('static', filename = 'css/tailwind.min.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename = 'css/index.css')}}" rel="stylesheet">
     <link href="{{ url_for('static', filename = 'css/toggle.css')}}" rel="stylesheet">
@@ -100,7 +101,7 @@
                                         </article>
 
                                         <article class = "smoke">
-                                            <p>Students in this program will have the opportunity to participate in two competitions: <span class = "weight_bold">BDC (Biodesign Challenge) & iGEM (international Genetically Engineered Machine)</span>. 
+                                            <p>Students in this program will have the opportunity to participate in two competitions: <span class = "weight_bold"><a  href = "https://www.biodesignchallenge.org/" target="_blank" rel="noopener noreferrer">BDC (Biodesign Challenge)</a> & <a href = "https://igem.org/" target="_blank" rel="noopener noreferrer">iGEM (international Genetically Engineered Machine)</a></span>. 
                                                 While competitions and their results are not the destination, if done right, they can catalyze creative thinking and innovation, allowing ideas to manifest.</p>
                                         </article>
 
@@ -113,21 +114,10 @@
 
                                         <br>
 
-                                        <h2 class="text-center tracking-wider smoke ">please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">application form</a>.</h2>
+                                        <h2 class="text-center tracking-wider smoke " style = "padding-bottom: calc( 12 * 1.5em);">please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">application form</a>.</h2>
 
 
-                                        <section class="text-center space-y-4 py-8 ">
-                                            <div class = "smoke"></div>
-                                            <div class = "smoke"></div>
-                                            <div class = "smoke"></div>
-                                            <div class = "smoke"></div>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>
-                                        </section>
+                                      
 
 
                                     </section>
@@ -175,7 +165,7 @@
                                         </article>
 
                                         <article class = "smoke">
-                                            <p>參與該課程的學生將有機會參加兩項競賽： <span class = "weight_bold">BDC(生物設計挑戰賽) 與 iGEM(國際基因工程機器競賽)。</span>
+                                            <p>參與該課程的學生將有機會參加兩項競賽： <span class = "weight_bold"><a  href = "https://www.biodesignchallenge.org/" target="_blank" rel="noopener noreferrer">BDC(生物設計挑戰賽)</a> 與 <a href = "https://igem.org/" target="_blank" rel="noopener noreferrer">iGEM(國際基因工程機器競賽)</a>。</span>
                                             雖然競賽及其結果並非最終目的，但如果善用它，所的激發創意思維與創新，真能讓果實 “美夢成真”。</p>
                                         </article>
 
@@ -198,21 +188,8 @@
 
                                         <br>
 
-                                        <h2 class="text-center tracking-wider smoke ">請填寫此<a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">表單</a>。</h2>
+                                        <h2 class="text-center tracking-wider smoke " style = "padding-bottom: calc( 12 * 1.5em);">請填寫此<a href="https://docs.google.com/forms/d/e/1FAIpQLScsJYInakGdMe54_S82-FmuyDz1-Q9zbHkkRXM9ghN1erZauQ/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" id = "application_form">表單</a>。</h2>
 
-
-                                        <section class="text-center space-y-4 py-8 ">
-                                            <div class = "smoke"></div>
-                                            <div class = "smoke"></div>
-                                            <div class = "smoke"></div>
-                                            <div class = "smoke"></div>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            <br>
-                                        </section>
 
 
                                     </section>
