--- a/wiki/pages/index.html
+++ b/wiki/pages/index.html
@@ -32,8 +32,8 @@
                                                 <p>EXPERIMENTAL EDUCATION</p>
                                                 <div class="flex-cradle">
                                                     <div class="slider-cradle">
-                                                    <div class="option-1">TW</div>
-                                                    <div class="option-2">EN</div>
+                                                    <div class="option-1">EN</div>
+                                                    <div class="option-2">TW</div>
                                                     <div class="handle"></div>
                                                   </div>	
                                                 </div> 
@@ -75,7 +75,7 @@
                                         </article>
                                         <article class = "smoke">
                                             <p>As traditional education continues to cultivate vocational thinking caused by hyper-specialization induced fragmentation,
-                                                 we want to picture a generation of cross-disciplinary thinkers. We that a recognition of how seemingly divergent disciplines 
+                                                 we want to picture a generation of cross-disciplinary thinkers. We believe a recognition of how seemingly divergent disciplines 
                                                  interplay to create is important for the next generation of <span class = "switch_text uppercase">scientists</span>. </p>
                                         </article>
 
